cursive-bootstrap/tests/ui/E-SEM/E-SEM-2824.cursive
// RUN: compile-fail
// DIAG: E-SEM-2824
// SPEC: 14.7
// DESC: Public mutable field on type with invariant

record PositiveInt {
    public var value: i32 //~ ERROR E-SEM-2824

    invariant { self.value > 0 }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
